<resources>
    <string name="app_name">Skip To It</string>

    <string name="notification_channel_playback">Playback Channel</string>
    <string name="channel_description_playback">Channel for playback notification</string>

    <string name="content_description_podcast_feature_image">podcast feature image</string>
    <string name="content_description_play_button">play button</string>
    <string name="content_description_subscribe_button">subscribe button</string>
    <string name="content_description_previous_episode">previous episode</string>
    <string name="content_description_next_episode">next episode</string>
    <string name="content_description_subscriptions_button">subscriptions button</string>
    <string name="content_description_search_button">search button</string>
    <string name="content_description_back_button">back button</string>
    <string name="content_description_pause_button">pause button</string>
    <string name="content_description_skip_to_start">skip to start button</string>
    <string name="content_description_skip_to_next_button">skip to next button</string>
    <string name="content_description_fast_forward_button">fast forward button</string>
    <string name="content_description_rewind_button">rewind button</string>
    <string name="content_description_logo">logo</string>
    <string name="powered_by_listen_notes">powered by listen notes</string>

    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="episodes">Episodes</string>
    <string name="total_episodes_format">%d Episodes</string>
    <string name="replies_format">%s Replies</string>
    <string name="add_comment">Add Comment</string>

    <string name="trending_heading_text">Trending</string>
    <string name="unplayed_heading_text">Unplayed</string>
    <string name="unfinished_heading_text">Unfinished</string>

    <string name="subscriptions">Subscriptions</string>
    <string name="search_text_box_hint">Search</string>

    <string name="title_activity_master">Master Activity</string>
    <string name="title_activity_launch">Launch Activity</string>
    <string name="title_activity_about">About</string>
    <string name="title_launch">Launch</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_search">Search</string>
    <string name="title_details">Details</string>
    <string name="title_episode">episode</string>
    <string name="title_create_comment">create_comment</string>
    <string name="title_update_comment">update_comment</string>
    <string name="title_replies">replies</string>
    <string name="title_create_reply">create_reply</string>
    <string name="title_update_reply">update_reply</string>

    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="username">username</string>
    <string name="ok">OK</string>
    <string name="reply">reply</string>
    <string name="edit_comment">edit comment</string>
    <string name="delete_comment">delete comment</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="subscriptions_sync_failed">Subscriptions Sync Failed</string>
    <string name="retry_sync">retry sync</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="about">About</string>
    <string name="you_have_no_subscriptions">You Have No Subscriptions</string>

    <!--SNACK BAR MESSAGES-->
    <string name="no_browser_error_message">No browser to launch page</string>
    <string name="couldnt_update_google_play_services">Couldn\'t update google play services</string>
    <string name="couldnt_connect_to_server">Couldn\'t connect to server</string>
    <string name="failed_to_load_parent_comment">Failed to load parent comment</string>
    <string name="failed_to_load_comment">Failed to load comment</string>
    <string name="failed_to_create_comment">Failed to create comment</string>
    <string name="failed_to_update_comment">Failed to update comment</string>
    <string name="error_loading_subscriptions">Couldn\'t load data</string>
    <string name="failed_to_sign_out">Failed to sign out</string>
    <string name="failed_to_retrieve_user">Failed to retrieve user</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="failed_to_load_page">Failed to load page</string>
    <string name="failed_to_toggle_new_playback">Failed to toggle new playback</string>
    <string name="failed_to_toggle_old_playback">Failed to toggle old playback</string>
    <string name="failed_to_detect_podcast">Failed to detect podcast</string>
    <string name="failed_to_get_details">Failed to get details</string>
    <string name="failed_to_get_subscription_data">Failed to get subscription data</string>
    <string name="failed_to_update_subscription">Failed to update subscription</string>
    <string name="failed_to_update_username">Failed to update username</string>
    <string name="failed_to_delete_comment">Failed to delete comment</string>
    <string name="vote_update_failed">Vote Update Failed</string>
    <string name="failed_to_load_previous_episode">Failed to load previous episode</string>
    <string name="failed_to_load_next_episode">Failed to load next episode</string>
    <string name="failed_to_retrieve_comment">Failed to retrieve comment</string>
    <string name="toggle_subscription_failed">Toggle subscription failed</string>
    <!--SNACK BAR MESSAGES-->

    <!--LAUNCH ACTIVITY TEXT-->
    <string name="app_description">Social Network For Podcast Lovers</string>
    <string name="google_continue_text_literal">google sign in</string>
    <string name="guest_continue_text_literal">continue</string>
    <string name="accept_terms_text">By clicking continue, you are agreeing to our\nTerms of Use and Privacy Policy</string>
    <string name="terms_url">https://www.websitepolicies.com/policies/view/Z9OW4dTy</string>
    <string name="privacy_url">https://www.websitepolicies.com/policies/view/3W9Q2ZnY</string>
    <!--LAUNCH ACTIVITY TEXT-->

    <!--preference keys-->
    <string name="settings_key_about_app">about_app</string>
    <string name="settings_key_support">support</string>
    <string name="settings_key_privacy">privacy</string>
    <string name="settings_key_terms">terms</string>
    <!--preference keys-->

    <!--settings data-->
    <string name="support_email_address">support@skiptoit.atmko.com</string>
    <!--settings data-->

    <!--settings titles-->
    <string name="settings_about_app_title">About App</string>
    <string name="settings_support_title">Support</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_terms_of_use_title">Terms of Use</string>
    <!--settings titles-->

    <!--settings summary-->
    <string name="settings_about_app_summary">Skip To It Version %s</string>
    <!--settings summary-->

    <string name="server_client_id">58655822133-gjg7l8q2dbdtnnrlh4jg583clq32s4kn.apps.googleusercontent.com</string>

</resources>