<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_subscriptions">

    <fragment
        android:id="@+id/navigation_launch"
        android:name="com.atmko.skiptoit.view.LaunchFragment"
        android:label="@string/title_launch"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_navigation_launch_to_navigation_subscriptions"
            app:destination="@id/navigation_subscriptions"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_launch"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.atmko.skiptoit.subcriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" >
        <action
            android:id="@+id/action_navigation_subscriptions_to_navigation_launch"
            app:destination="@id/navigation_launch" />
        <action
            android:id="@+id/action_navigation_subscriptions_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.atmko.skiptoit.search.SearchParentFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_parent">
        <action
            android:id="@+id/action_navigation_search_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.atmko.skiptoit.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="podcast"
            app:argType="com.atmko.skiptoit.model.Podcast" />
    </fragment>

</navigation>