<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.atmko.podcastapp.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.atmko.podcastapp.view.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.atmko.podcastapp.view.SearchParentFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_parent">
        <action
            android:id="@+id/action_navigation_search_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.atmko.podcastapp.view.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="podcast_id"
            app:argType="string" />
    </fragment>

</navigation>
