<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    android:paddingTop="@dimen/x1_layout_margin">

    <TextView
        android:id="@id/exo_position"
        style="@style/Caption_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x2_layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@id/exo_duration"
        style="@style/Caption_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x2_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="59:00" />

    <ImageButton
        android:id="@id/exo_rew"
        style="@style/ExoMediaButton.Rewind"
        android:layout_width="@dimen/x5_layout_margin"
        android:layout_height="@dimen/x5_layout_margin"
        android:contentDescription="@string/content_description_rewind_button"
        android:src="@drawable/ic_rewind"
        app:layout_constraintEnd_toStartOf="@id/exo_prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exo_position" />

    <ImageButton
        android:id="@id/exo_prev"
        style="@style/ExoMediaButton.Previous"
        android:layout_width="@dimen/x5_layout_margin"
        android:layout_height="@dimen/x5_layout_margin"
        android:contentDescription="@string/content_description_skip_to_start"
        android:src="@drawable/ic_skip_backwards"
        app:layout_constraintEnd_toStartOf="@id/playFrameLayout"
        app:layout_constraintStart_toEndOf="@id/exo_rew"
        app:layout_constraintTop_toBottomOf="@id/exo_position" />

    <FrameLayout
        android:id="@+id/playFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/exo_next"
        app:layout_constraintStart_toEndOf="@id/exo_prev"
        app:layout_constraintTop_toBottomOf="@id/exo_position">

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/content_description_play_button"
            android:src="@drawable/ic_play_button_circular" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/content_description_play_button"
            android:src="@drawable/ic_pause_button_circular" />

    </FrameLayout>

    <ImageButton
        android:id="@id/exo_next"
        style="@style/ExoMediaButton.Next"
        android:layout_width="@dimen/x5_layout_margin"
        android:layout_height="@dimen/x5_layout_margin"
        android:contentDescription="@string/content_description_skip_to_next_button"
        android:src="@drawable/ic_skip_forward"
        app:layout_constraintEnd_toStartOf="@id/exo_ffwd"
        app:layout_constraintStart_toEndOf="@id/playFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/exo_position" />

    <ImageButton
        android:id="@id/exo_ffwd"
        style="@style/ExoMediaButton.FastForward"
        android:layout_width="@dimen/x5_layout_margin"
        android:layout_height="@dimen/x5_layout_margin"
        android:contentDescription="@string/content_description_fast_forward_button"
        android:src="@drawable/ic_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/exo_next"
        app:layout_constraintTop_toBottomOf="@id/exo_position" />

    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1_layout_margin"
        app:buffered_color="@color/color_divider"
        app:layout_constraintTop_toBottomOf="@id/playFrameLayout"
        app:played_color="@color/colorAccent"
        app:scrubber_color="@color/colorAccent"
        app:unplayed_color="@color/color_divider" />

    <Button
        android:id="@+id/timeBarOverlayButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playFrameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>