<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_episode">

    <fragment
        android:id="@+id/navigation_episode"
        android:name="com.atmko.skiptoit.episode.EpisodeFragment"
        android:label="@string/title_episode"
        tools:layout="@layout/fragment_episode">
        <argument
            android:name="podcast_id"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="episode_id"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_episode"
            app:destination="@id/navigation_episode"
            app:popUpTo="@id/navigation_episode"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_crate_comment"
            app:destination="@id/navigation_create_comment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_update_comment"
            app:destination="@id/navigation_update_comment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_create_reply"
            app:destination="@id/navigation_create_reply"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_bottomSheet"
            app:destination="@id/bottomSheet" />
        <action
            android:id="@+id/action_navigation_episode_to_navigation_replies"
            app:destination="@id/navigation_replies"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_comment"
        android:name="com.atmko.skiptoit.createcomment.CreateCommentFragment"
        android:label="@string/title_create_comment"
        tools:layout="@layout/fragment_create_comment">
        <argument
            android:name="podcast_id"
            app:argType="string" />
        <argument
            android:name="episode_id"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_update_comment"
        android:name="com.atmko.skiptoit.updatecomment.UpdateCommentFragment"
        android:label="@string/title_update_comment"
        tools:layout="@layout/fragment_create_comment">
        <argument
            android:name="comment_id"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_reply"
        android:name="com.atmko.skiptoit.createreply.CreateReplyFragment"
        android:label="@string/title_create_reply"
        tools:layout="@layout/fragment_create_reply">
        <argument
            android:name="parent_id"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_update_reply"
        android:name="com.atmko.skiptoit.updatecomment.UpdateReplyFragment"
        android:label="@string/title_update_reply"
        tools:layout="@layout/fragment_create_reply">
        <argument
            android:name="parent_id"
            app:argType="string" />
        <argument
            android:name="comment_id"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="quoted_text"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_replies"
        android:name="com.atmko.skiptoit.episode.replies.RepliesFragment"
        android:label="@string/title_replies"
        tools:layout="@layout/fragment_replies">
        <argument
            android:name="parent_comment_id"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_bottomSheet"
            app:destination="@id/bottomSheet" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_replies"
            app:destination="@id/navigation_replies"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_create_reply"
            app:destination="@id/navigation_create_reply"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_update_comment"
            app:destination="@id/navigation_update_comment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_update_reply"
            app:destination="@id/navigation_update_reply"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_replies_to_navigation_episode"
            app:destination="@id/navigation_episode"
            app:popUpTo="@id/navigation_replies"
            app:popUpToInclusive="true" />
    </fragment>

    <dialog
        android:id="@+id/bottomSheet"
        android:name="com.atmko.skiptoit.confirmation.ConfirmationFragment"
        tools:layout="@layout/fragment_confirmation">
        <argument
            android:name="message"
            app:argType="string" />
    </dialog>

</navigation>
